force-app/main/default/objects/Term_Deposit__x/Term_Deposit__x.object-meta.xml
<CustomObject>
    <externalDataSource>Core_Banking_Data_Source</externalDataSource>
    <externalName>TermDeposit</externalName>
    <label>Term Deposit</label>
    <pluralLabel>Term Deposits</pluralLabel>
</CustomObject>