force-app/main/default/objects/Term_Deposit__x/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - CAPS</complianceGroup>
    <description>Name attached to the product instance on CAP</description>
    <externalDeveloperName>AccountName</externalDeveloperName>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>