force-app/main/default/objects/Term_Deposit__x/fields/Available_Funds__c.field-meta.xml
<CustomField>
    <fullName>Available_Funds__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non_Personal_Information;Source - CAPS</complianceGroup>
    <description>Funds Available</description>
    <externalDeveloperName>BalanceAvailable</externalDeveloperName>
    <label>Available Funds ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>