force-app/main/default/objects/Term_Deposit__x/fields/Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Closed__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non_Personal_Information;Source - CAPS</complianceGroup>
    <description>Date closed</description>
    <externalDeveloperName>DateClosed</externalDeveloperName>
    <label>Date Closed</label>
    <length>50</length>
    <type>Text</type>
</CustomField>