force-app/main/default/objects/Term_Deposit__x/fields/Date_Opened__c.field-meta.xml
<CustomField>
    <fullName>Date_Opened__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non_Personal_Information;Source - CAPS</complianceGroup>
    <description>Date opened</description>
    <externalDeveloperName>DateOpened</externalDeveloperName>
    <label>Date Opened</label>
    <length>50</length>
    <type>Text</type>
</CustomField>