force-app/main/default/objects/Term_Deposit__x/fields/Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non_Personal_Information;Source - CAPS</complianceGroup>
    <description>Interest Rate</description>
    <externalDeveloperName>InterestRate</externalDeveloperName>
    <label>Interest Rate (%)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>