force-app/main/default/objects/Term_Deposit__x/fields/Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Issue_Date__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non_Personal_Information;Source - CAPS</complianceGroup>
    <description>Issue Date</description>
    <externalDeveloperName>IssueDate</externalDeveloperName>
    <label>Issue Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>