force-app/main/default/objects/Term_Deposit__x/fields/Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Date__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non_Personal_Information;Source - CAPS</complianceGroup>
    <description>Maturity Date</description>
    <externalDeveloperName>MaturityDate</externalDeveloperName>
    <label>Maturity Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>