force-app/main/default/objects/Term_Deposit__x/fields/Number_Of_Signatures__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Signatures__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non_Personal_Information;Source - CAPS</complianceGroup>
    <description>Number of Signatures</description>
    <externalDeveloperName>NumberOfSignatures</externalDeveloperName>
    <label>Number Of Signatures</label>
    <length>255</length>
    <type>Text</type>
</CustomField>