force-app/main/default/objects/Term_Deposit__x/fields/Pledge__c.field-meta.xml
<CustomField>
    <fullName>Pledge__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Pledge</description>
    <externalDeveloperName>Pledge</externalDeveloperName>
    <label>Pledge</label>
    <type>Checkbox</type>
</CustomField>