force-app/main/default/objects/Term_Deposit__x/fields/Pledge_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Amount__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non_Personal_Information;Source - CAPS</complianceGroup>
    <description>$ amount of a pledge</description>
    <externalDeveloperName>PledgeAmount</externalDeveloperName>
    <label>Pledge Amount($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>