force-app/main/default/objects/Term_Deposit__x/fields/Previous_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Previous_Interest_Rate__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non_Personal_Information;Source - CAPS</complianceGroup>
    <description>Previous Interest Rate</description>
    <externalDeveloperName>PreviousInterestRate</externalDeveloperName>
    <label>Previous Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>