force-app/main/default/objects/Term_Deposit__x/fields/Stops_Pay__c.field-meta.xml
<CustomField>
    <fullName>Stops_Pay__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - CAPS</complianceGroup>
    <description>Stops Pay</description>
    <externalDeveloperName>StopsPay</externalDeveloperName>
    <label>Stop Pay Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>