force-app/main/default/objects/Term_Deposit__x/fields/Sub_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Sub_Product_Code__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non_Personal_Information;Source - CAPS</complianceGroup>
    <description>The ANZ sub product code</description>
    <externalDeveloperName>SubProductCode</externalDeveloperName>
    <label>Sub-Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>