force-app/main/default/objects/Term_Deposit__x/fields/TPMI_SAO__c.field-meta.xml
<CustomField>
    <fullName>TPMI_SAO__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy_Non_Personal_Information;Source - CAPS</complianceGroup>
    <description>Third party</description>
    <externalDeveloperName>TPMISAO</externalDeveloperName>
    <label>TPMI-SAO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>